first app Symfony

--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,14 +1,14 @@
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class="container-fluid ">
         <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
+        <div class="collapse navbar-collapse " id="navbarColor01">
+            <ul class="navbar-nav me-auto d-flex align-items-center">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home
                         <span class="visually-hidden">(current)</span>
@@ -19,6 +19,16 @@
                     <a class="nav-link" href="{{ path('single', {'id': continent.id}) }}">{{ continent.name }}</a>
                 </li>
                 {% endfor %}
+                {% if app.user %}
+                    <li>
+                        <a class="btn btn-dark border-danger"  href="{{ path('app_logout') }}">{{ app.user.username }} Logout</a>
+                    </li>
+                {% endif %}
+                {% if app.user == false %}
+                    <li>
+                        <a class="btn btn-dark border-success"  href="{{ path('app_login') }}">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
