--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,7 +8,7 @@
         <h1>Tableau des pays</h1>
         <div class="d-flex p-5">
             {% for country in countries %}
-                <div class="card text-white bg-primary mb-3 m-2" style="max-width: 20rem;">
+                <div class="card text-white bg-dark mb-3 m-2" style="max-width: 20rem;">
                     <div class="card-header">Pays </div>
                     <div class="card-body">
                         <h4 class="card-title">{{ country.name }}</h4>
