--- a/templates/main/singleContinent.html.twig
+++ b/templates/main/singleContinent.html.twig
@@ -1,4 +1,4 @@
-<div class="card border-primary mb-3" style="max-width: 20rem;">
+m<div class="card border-primary mb-3" style="max-width: 20rem;">
     <div class="card-header">Header</div>
     <div class="card-body">
         <h4 class="card-title">Primary card title</h4>
